docs-archive/apache-airflow-providers-fab/2.4.0/_sources/_api/airflow/providers/fab/auth_manager/models/db/index.rst.txt
airflow.providers.fab.auth_manager.models.db
============================================

.. py:module:: airflow.providers.fab.auth_manager.models.db


Attributes
----------

.. autoapisummary::

   airflow.providers.fab.auth_manager.models.db.PACKAGE_DIR


Classes
-------

.. autoapisummary::

   airflow.providers.fab.auth_manager.models.db.FABDBManager


Module Contents
---------------

.. py:data:: PACKAGE_DIR

.. py:class:: FABDBManager(session)

   Bases: :py:obj:`airflow.utils.db_manager.BaseDBManager`


   Manages FAB database.


   .. py:attribute:: metadata


   .. py:attribute:: version_table_name
      :value: 'alembic_version_fab'



   .. py:attribute:: migration_dir


   .. py:attribute:: alembic_file


   .. py:attribute:: supports_table_dropping
      :value: True



   .. py:attribute:: revision_heads_map


   .. py:method:: create_db_from_orm()

      Create database from ORM.



   .. py:method:: upgradedb(to_revision=None, from_revision=None, show_sql_only=False)

      Upgrade the database.



   .. py:method:: downgrade(to_revision, from_revision=None, show_sql_only=False)

      Downgrade the database.



   .. py:method:: drop_tables(connection)


